--- a/index.html
+++ b/index.html
@@ -5,14 +5,18 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<script src="js/jquery.js"></script>
+	<script src="js/cycle.js"></script>
 	<script src="js/slideshow.js"></script>
 </head>
 <body>
-	<div class="slideshow">
-		<img src="img/img1.jpg" id="img1" alt="">
-		<img src="img/img2.jpg" id="img2" alt="">
-		<img src="img/img3.jpg" id="img3" alt="">
-		<img src="img/img4.jpg" id="img4" alt="">
+	<div class="cycle-slideshow slideshow"
+    	data-cycle-fx="scrollHorz"
+    	data-cycle-pause-on-hover="false"
+    	data-cycle-speed="200">
+		<img src="img/img1.jpg" id="img1" class="" alt="1"></br>
+		<img src="img/img2.jpg" id="img2" class="" alt="2"></br>
+		<img src="img/img3.jpg" id="img3" class="" alt="3"></br>
+		<img src="img/img4.jpg" id="img4" class="" alt="4"></br>
 	</div>
 </body>
 </html>
