--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 	<script src="js/slideshow.js"></script>
 </head>
 <body>
-	<div class="cycle-slideshow slideshow"
-    	data-cycle-fx="scrollHorz"
-    	data-cycle-pause-on-hover="false"
-    	data-cycle-speed="200">
+	<div class="slideshow">
 		<img src="img/img1.jpg" id="img1" class="" alt="1"></br>
 		<img src="img/img2.jpg" id="img2" class="" alt="2"></br>
 		<img src="img/img3.jpg" id="img3" class="" alt="3"></br>
